// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-tertiary-color);
  border-color: transparent;
  border-color: var(--wp-g2-button-tertiary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-tertiary-text-color);
  border-color: transparent;
  border-color: var(--wp-g2-control-border-color-subtle);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-0[disabled]:not([aria-busy='true']),
.emotion-0[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-0[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-0[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-0 svg {
  display: block;
}

.emotion-0:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-0:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-tertiary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-tertiary-border-color-hover);
}

.emotion-0:focus,
.emotion-0[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-tertiary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-tertiary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-tertiary-text-color-focus);
}

.emotion-0:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-tertiary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-tertiary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-tertiary-text-color-active);
}

.emotion-0[data-destructive='true'] {
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-0[data-destructive='true']:hover,
.emotion-0[data-destructive='true']:focus {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
}

.emotion-0[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  border-color: transparent;
  border-color: var(--wp-g2-control-border-color-subtle);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-0:focus {
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  opacity: 1;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 svg {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: currentColor;
  fill: currentColor;
  height: 12px;
  width: 12px;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

<button
  aria-busy="false"
  class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button components-close-button wp-components-close-button ic-pztd8e ic-i0z4gr ic-1d6ec17 ic-192yz5d emotion-0"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="ButtonIcon"
  >
    <div
      class="components-icon wp-components-icon ic-2q44rw ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="12"
        role="img"
        size="12"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </div>
  </span>
  <span
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-3"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render size 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: transparent;
  background-color: var(--wp-g2-button-tertiary-color);
  border-color: transparent;
  border-color: var(--wp-g2-button-tertiary-border-color);
  color: #007cba;
  color: var(--wp-g2-button-tertiary-text-color);
  min-height: calc(30px * 1.2);
  min-height: var(--wp-g2-control-height-large);
  border-color: transparent;
  border-color: var(--wp-g2-control-border-color-subtle);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-0[disabled]:not([aria-busy='true']),
.emotion-0[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-0[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-0[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-0 svg {
  display: block;
}

.emotion-0:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-0:hover {
  background-color: transparent;
  background-color: var(--wp-g2-button-tertiary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-tertiary-border-color-hover);
}

.emotion-0:focus,
.emotion-0[data-focused='true'] {
  background-color: transparent;
  background-color: var(--wp-g2-button-tertiary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-tertiary-border-color-focus);
  color: #007cba;
  color: var(--wp-g2-button-tertiary-text-color-focus);
}

.emotion-0:active {
  background-color: rgba(0, 0, 0, 0.05);
  background-color: var(--wp-g2-button-tertiary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-tertiary-border-color-active);
  color: #007cba;
  color: var(--wp-g2-button-tertiary-text-color-active);
}

.emotion-0[data-destructive='true'] {
  color: #D94F4F;
  color: var(--wp-g2-color-destructive);
}

.emotion-0[data-destructive='true']:hover,
.emotion-0[data-destructive='true']:focus {
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
}

.emotion-0[data-destructive='true']:active {
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-0[data-icon='true'] {
  min-width: calc(30px * 1.2);
  min-width: var(--wp-g2-control-height-large);
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  border-color: transparent;
  border-color: var(--wp-g2-control-border-color-subtle);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-0:focus {
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  opacity: 1;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 svg {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: currentColor;
  fill: currentColor;
  height: 12px;
  width: 12px;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

<button
  aria-busy="false"
  class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button components-close-button wp-components-close-button ic-pztd8e ic-i0z4gr ic-1d6ec17 ic-192yz5d emotion-0"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="ButtonIcon"
  >
    <div
      class="components-icon wp-components-icon ic-2q44rw ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="12"
        role="img"
        size="12"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </div>
  </span>
  <span
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-3"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render variant 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  --wp-g2-flex-gap: calc(4px * 2);
  --wp-g2-flex-gap: calc(var(--wp-g2-grid-base) * 2);
  --wp-g2-flex-item-margin-bottom: 0;
  --wp-g2-flex-item-margin-right: calc(4px * 2);
  --wp-g2-flex-item-margin-right: var(--wp-g2-flex-gap);
  --wp-g2-flex-item-margin-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border-color: transparent;
  border-radius: 2px;
  border-radius: var(--wp-g2-control-border-radius);
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0 0 0.5px transparent;
  box-shadow: 0 0 0 var(--wp-g2-control-box-shadow-focus-size) transparent;
  box-sizing: border-box;
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  height: auto;
  line-height: 1;
  min-height: 30px;
  min-height: var(--wp-g2-control-height);
  outline: none;
  padding-bottom: calc(4px * 1);
  padding-bottom: calc(var(--wp-g2-grid-base) * 1);
  padding-left: 12px;
  padding-left: var(--wp-g2-control-padding-x);
  padding-right: 12px;
  padding-right: var(--wp-g2-control-padding-x);
  padding-top: calc(4px * 1);
  padding-top: calc(var(--wp-g2-grid-base) * 1);
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  touch-action: manipulation;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: auto;
  padding-left: calc(4px * 0);
  padding-left: calc(var(--wp-g2-grid-base) * 0);
  padding-right: calc(4px * 0);
  padding-right: calc(var(--wp-g2-grid-base) * 0);
  text-align: center;
  color: #007cba;
  color: var(--wp-g2-button-text-color);
  font-weight: 600;
  padding-left: calc(12px * calc(4/3));
  padding-left: var(--wp-g2-button-padding-x);
  padding-right: calc(12px * calc(4/3));
  padding-right: var(--wp-g2-button-padding-x);
  background-color: #007cba;
  background-color: var(--wp-g2-button-primary-color);
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color);
  color: #ffffff;
  color: var(--wp-g2-button-primary-text-color);
  border-color: transparent;
  border-color: var(--wp-g2-control-border-color-subtle);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
  padding: calc(4px * 0);
  padding: calc(var(--wp-g2-grid-base) * 0);
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-0>*+*:not(marquee) {
  margin-left: calc(4px * 2);
  margin-left: calc(var(--wp-g2-grid-base) * 2);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  -webkit-transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  -webkit-transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
  transition: all 200ms cubic-bezier(0.12,0.8,0.32,1);
  transition: all var(--wp-g2-transition-duration) cubic-bezier(0.12,0.8,0.32,1);
}

.emotion-0[disabled]:not([aria-busy='true']),
.emotion-0[aria-disabled='true']:not([aria-busy='true']) {
  opacity: 0.5;
  cursor: auto;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.5px #007cba;
  box-shadow: var(--wp-g2-control-box-shadow-focus);
}

.emotion-0[data-destructive='true']:focus {
  box-shadow: 0 0 0 0.5px #D94F4F;
  box-shadow: var(--wp-g2-control-destructive-box-shadow-focus);
}

.emotion-0[data-icon='true'] {
  min-width: 30px;
  min-width: var(--wp-g2-control-height);
}

.emotion-0 svg {
  display: block;
}

.emotion-0:active {
  color: #007cba;
  color: var(--wp-g2-button-text-color-active);
}

.emotion-0:active {
  color: #ffffff;
  color: var(--wp-g2-button-primary-text-color-active);
}

.emotion-0:hover {
  background-color: #007cba;
  background-color: var(--wp-g2-button-primary-color-hover);
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-hover);
  color: #ffffff;
  color: var(--wp-g2-button-primary-text-color-hover);
}

.emotion-0:focus,
.emotion-0[data-focused='true'] {
  background-color: #007cba;
  background-color: var(--wp-g2-button-primary-color-focus);
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
  color: #ffffff;
  color: var(--wp-g2-button-primary-text-color-focus);
}

.emotion-0:active {
  background-color: #1e1e1e;
  background-color: var(--wp-g2-button-primary-color-active);
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-active);
}

.emotion-0[data-destructive='true'] {
  background-color: #D94F4F;
  background-color: var(--wp-g2-color-destructive);
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
}

.emotion-0[data-destructive='true']:hover,
.emotion-0[data-destructive='true']:focus,
.emotion-0[data-destructive='true'][data-focused='true'] {
  background-color: #D94F4F;
  background-color: var(--wp-g2-color-destructive);
  border-color: #D94F4F;
  border-color: var(--wp-g2-color-destructive);
}

.emotion-0[data-destructive='true']:active {
  background-color: #1e1e1e;
  background-color: var(--wp-g2-color-text);
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  border-color: transparent;
  border-color: var(--wp-g2-control-border-color-subtle);
  color: #1e1e1e;
  color: var(--wp-g2-color-text);
}

.emotion-0:focus {
  border-color: #007cba;
  border-color: var(--wp-g2-button-primary-border-color-focus);
}

.emotion-1 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: var(--wp-g2-flex-item-display);
  opacity: 1;
}

@media (prefers-reduced-motion) {
  .emotion-1 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-1 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-1 svg {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: currentColor;
  fill: currentColor;
  height: 12px;
  width: 12px;
}

@media (prefers-reduced-motion) {
  .emotion-2 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-2 {
  -webkit-transition: none!important;
  transition: none!important;
}

.emotion-2 svg {
  display: block;
}

.emotion-3 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-family: var(--wp-g2-font-family);
  font-size: 13px;
  font-size: var(--wp-g2-font-size);
  font-weight: normal;
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: -1px;
  box-shadow: 0 0px 0px 0 rgba(0 ,0,0,0);
  opacity: 1;
  opacity: var(--wp-g2-elevation-intensity);
  left: -1px;
  right: -1px;
  top: -1px;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  -webkit-transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow var(--wp-g2-transition-duration) var(--wp-g2-transition-timing-function);
}

@media (prefers-reduced-motion) {
  .emotion-3 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-3 {
  -webkit-transition: none!important;
  transition: none!important;
}

<button
  aria-busy="false"
  class="components-flex wp-components-flex ic-17cs4ki components-base-button wp-components-base-button components-button wp-components-button components-close-button wp-components-close-button ic-pztd8e ic-i0z4gr ic-1d6ec17 ic-192yz5d emotion-0"
  data-active="false"
  data-destructive="false"
  data-focused="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  type="button"
>
  <span
    class="components-flex-item wp-components-flex-item ic-1p3tlc8 ic-192yz5d emotion-1"
    data-g2-c16t="true"
    data-g2-component="ButtonIcon"
  >
    <div
      class="components-icon wp-components-icon ic-2q44rw ic-192yz5d emotion-2"
      data-g2-c16t="true"
      data-g2-component="Icon"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="12"
        role="img"
        size="12"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </div>
  </span>
  <span
    class="components-elevation wp-components-elevation ic-i1zzlu ic-192yz5d emotion-3"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;
